--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,23 +3,44 @@
     <title>Login Page</title>
 </head>
 <body class="bg-emerald-200">
-<section class="flex">
-<div class="bg-emerald-500 flex-col container text-center space-y-9 mt-10 bold text-4xl w-1/2 py-9 rounded">
+<section class="flex place-content-center container justify-center items-center h-screen">
+<div class="bg-emerald-500 flex-col container text-center space-y-9 bold text-4xl w-1/2 py-9 rounded justify-center">
 <h1 class="text-slate-700 text-7xl font-bold">Login</h1>
 <% if (messages.error) { %> 
     <%= messages.error %> 
     <% } %>  
 <form action="/login" method="post">
     <div>
-        <label for="email" class="text-slate-800">Email</label>
-        <input type="email" id="email" name="email" required class="m-4">
+        <label for="email" class="text-slate-800 ">Email</label>
+        <input type="email" id="email" name="email" class="m-4 rounded invalid:border-pink-500" required>
     </div>
     <div>
         <label for="password" class="text-slate-800">Password</label>
-        <input type="password" id="password" name="password" required >
+        <input type="password" id="password" name="password" class="rounded" required>
     </div>
-    <button class="text-white bg-slate-600 py-3 px-6 rounded mt-9"><a href="/register">Register</a></button>
+    <div>
+    
+    </div>
+<button type="submit" class=" text-white bg-slate-700 py-3 px-6 rounded mt-9 hover:bg-slate-600 hover:text-slate-200">Login</button>
+<button class="bg-emerald-200 py-3 px-6 rounded text-slate-800 hover:bg-slate-50"><a href="/register">Register</a></button>    
 </form>
 </div>
 </section>
 </body>
+<!-- <h1>Login</h1>
+<% if (messages.error) { %>
+  <%= messages.error %>
+<% } %>
+<form action="/login" method="POST">
+  <div>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" required>
+  </div>
+  <div>
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password" required>
+  </div>
+  <button type="submit">Login</button>
+<button><a href="/register">Register</a></button>
+
+</form> -->
