--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,17 +1,26 @@
-<h1>Register</h1>
+<head>
+    <link rel="stylesheet" href="/css/main.css">
+    <title>Register</title>
+</head>
+<body class="bg-emerald-200">
+    <section class="flex place-content-center container justify-center items-center h-screen">
+    <div class="bg-emerald-500 flex-col container text-center space-y-9 bold text-4xl w-1/2 py-9 rounded justify-center">
+<h1 class="text-slate-700 text-7xl font-bold">Register</h1>
 <form action="/register" method="post">
     <div>
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" required >
+        <label for="name" class="text-slate-800">Username</label>
+        <input type="text" id="name" name="name" required class="rounded my-5 mr-5" >
     </div>
     <div>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required >
+        <label for="email" class="text-slate-800 ml-9">Email</label>
+        <input type="email" id="email" name="email" required class="rounded mb-5">
     </div>
     <div>
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required >
+        <label for="password" class="text-slate-800 rounded">Password</label>
+        <input type="password" id="password" name="password" required class="rounded mr-5">
     </div>
-    <button type="submit">Register</button>
+    <button type="submit" class="text-white bg-slate-700 py-3 px-6 rounded mt-9 hover:bg-slate-600 hover:text-slate-200">Register</button>
 </form>
-<a href="/login">Login</a>
+</div>
+</section>
+</body>
