--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,6 +20,7 @@
         <input type="password" id="password" name="password" required class="rounded mr-5">
     </div>
     <button type="submit" class="text-white bg-slate-700 py-3 px-6 rounded mt-9 hover:bg-slate-600 hover:text-slate-200">Register</button>
+    <button class="bg-emerald-200 py-3 px-6 rounded text-slate-800 hover:bg-slate-50"><a href="/login">Back to Login</a></button> 
 </form>
 </div>
 </section>
