--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,49 @@
 <html>
+
 <head>
     <title>Home Page</title>
-    </head>
-<nav>
-</nav>
-<h1>Hello <%= username %> </h1>
-<form action="/logout?_method=DELETE" method="POST">
-    <button type="submit">Log Out</button>
-</form>
+    <link rel="stylesheet" href="/css/main.css">
+</head>
+
+<body class="">
+    <!-- <nav>
+    </nav> -->
+    <div class="container flex justify-evenly pt-6 pb-2 bg-emerald-200 ">
+        <h1 class="text-5xl font-bold text-slate-700">Welcome <%= username %>
+        </h1>
+        <form action="/logout?_method=DELETE" method="POST">
+            <button type="submit"
+                class="bg-emerald-500 py-3 px-6 rounded text-slate-800 text-white font-bold text-2xl hover:bg-slate-100 hover:text-slate-700">Log
+                Out</button>
+        </form>
+    </div>
+    <div id="home">
+    <section class="flex-col place-content-center pt-4" id="food-ctn">
+        <div class="border-4 border-sky-500 rounded-2xl">
+            <img src="https://scx2.b-cdn.net/gfx/news/hires/2016/howcuttingdo.jpg" alt="junk food"  class="rounded-t-xl" width="100%">
+        </div>
+        <div class="border-4 border-sky-500 rounded-2xl">
+            <img src="https://insanelygoodrecipes.com/wp-content/uploads/2020/12/Chocolate-Chip-Pancakes.png" alt="breakfast pic" class="rounded-t-xl" width="100%" >
+        </div>
+        <div class="border-4 border-sky-500 rounded-2xl">
+            <img src="https://www.thespruceeats.com/thmb/jB_owTgrUOeLFn41ta94EnDQQYE=/3000x1687/smart/filters:no_upscale()/classic-caesar-salad-recipe-996054-Hero_01-33c94cc8b8e841ee8f2a815816a0af95.jpg" alt="vegetarian" class="rounded-t-xl">
+        </div>
+    </section>
+    </div>
+</body>
+<style>
+    /* *{
+        border: 1px solid black;
+    } */
+#home{
+    background: rgb(0,10,117);
+    background: radial-gradient(circle, rgba(0,10,117,1) 0%, rgba(18,19,20,1) 100%);
+    height: 100vh;
+   
+}
+#food-ctn{
+    display: grid;
+    grid-template-columns:repeat( auto-fit, minmax(250px, 1fr) )
+}
+</style>
 </html>
