--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
         <!-- <div class="flex space-x-9" > -->
            
         <form action="/logout?_method=DELETE" method="POST">
-            <button class="bg-emerald-500 rounded p-4 text-slate-800 text-white font-bold text-2xl mr-4 hover:bg-slate-600 hover:text-slate-200"><a href="#">View Orders</a></button>
+            <button type="button" class="bg-emerald-500 rounded p-4 text-slate-800 text-white font-bold text-2xl mr-4 hover:bg-slate-600 hover:text-slate-200"><a href="#">View Orders</a></button>
             <button type="submit" class="p-4 rounded font-bold text-2xl bg-slate-100 text-slate-700 mr-7 hover:bg-slate-50">Log Out</button>
         </form>
         <!-- </div> -->
@@ -75,7 +75,7 @@
   transform: translate(-50%,25%);
   text-align: center;
   font-size: larger;
-  border-radius: 5px;
+  border-radius: 8px;
   overflow: hidden;
 }
 #food td, #food th {
